# dreamstream

./: manage.py  pyproject.toml
Dreamstream/: asgi.py  model_manager.py  settings.py  threadlocals.py  urls.py  views.py  wsgi.py
accounts/: app_settings.py  backend.py  context_processors.py  forms.py  middleware.py  models.py  serializers.py  urls.py  views.py  viewsets.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: auth_group_list.html  auth_groupobject_list.html  base.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  userlist.html  verification_sent.html
commons/: models.py  serializers.py  tools.py  urls.py  views.py  viewsets.py
commons/migrations/: 0001_initial.py
commons/templates/commons/: departmentlist.html  menugrouplist.html  menulist.html  parameterlist.html  playground.html
dreams/: models.py  urls.py  views.py
dreams/templates/dreams/: dream_reply.html  dreamlist.html
static/css/: bootstrap-rtl.min.css  bootstrap-rtl.min.css.map  bootstrap.css  bootstrap.min.css  bootstrap.min.css.map  custom.css
static/js/: app.js
static/js/pages/: apps-nft-explore.init.js  ecommerce-product-list.init.js  (+3 more)
templates/dashboards/: dashboard-analytics.html  dashboard-job.html  dashboard-nft.html  index.html
templates/layouts/: layouts-horizontal.html  layouts-vertical.html
templates/partials/: base.html  customizer.html  footer.html  sidebar.html  topbar.html
